--- a/index.html
+++ b/index.html
@@ -1,9 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Website</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sequence Transformer Project</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        .container {
+            max-width: 900px;
+            margin: 30px auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+        }
+        a.project-link {
+            display: inline-block;
+            margin: 15px 0;
+            padding: 10px 15px;
+            background: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        a.project-link:hover {
+            background: #0056b3;
+        }
+        .video-section {
+            margin-top: 20px;
+        }
+        .video-placeholder {
+            width: 100%;
+            height: 400px;
+            background: #ddd;
+            border-radius: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #666;
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
-  <h1>Hello from GitHub Pages!</h1>
+    <header>
+        <h1>Sequence Transformer Project</h1>
+    </header>
+
+    <div class="container">
+        <h2>About This Project</h2>
+        <p>
+            This website showcases the Sequence Transformer project, a machine learning model designed to learn and predict numerical sequence patterns such as linear, quadratic, logarithmic, Fibonacci, Collatz, and more.
+        </p>
+
+        <a class="project-link" href="https://github.com/jtbillings22/sequence-transformer" target="_blank">View Project Repository</a>
+
+        <div class="video-section">
+            <h2>Project Video</h2>
+            <div class="video-placeholder">
+                Video goes here (embed YouTube or upload)
+            </div>
+        </div>
+    </div>
 </body>
 </html>
