--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
             color: #666;
             font-size: 20px;
         }
+        .pdf-section {
+            margin-top: 30px;
+        }
+        .pdf-viewer {
+            width: 100%;
+            height: 600px;
+            border: none;
+            border-radius: 8px;
+            background: #eee;
+        }
     </style>
 </head>
 <body>
@@ -61,8 +71,40 @@
     <div class="container">
         <h2>About This Project</h2>
         <p>
-            This website showcases the Sequence Transformer project, a machine learning model designed to learn and predict numerical sequence patterns such as linear, quadratic, logarithmic, Fibonacci, Collatz, and more.
+            This website showcases the Sequence Transformer project, a machine learning model designed to learn and predict
+            numerical sequence patterns such as linear, quadratic, logarithmic, Fibonacci, Collatz, and more.
         </p>
+
+        <!-- Abstract section -->
+        <h2>Abstract</h2>
+        <p>
+            <!-- Abstract -->
+             	This project investigates the capability of a hybrid transformer architecture for learning and predicting numerical 
+                sequence patterns. We generated a dataset that labeled ten distinct sequence types: constant, linear, quadratic, logarithmic, 
+                prime numbers, Collatz sequences, arithmetic progressions, Fibonacci sequences, noisy sinusoidal patterns, and geometric 
+                progressions. Our model extends a standard transformer encoder by incorporating multiple prediction heads 
+                (delta, ratio, and direct value), type embeddings, and a learned gating mechanism that combines prediction strategies. 
+                Training is performed by normalizing the synthetic dataset to have zero mean and standard deviation one. Then through 
+                the sliding window technique we ask our network to make a prediction, then compute the errors and adjust the weights to 
+                minimize these errors. Experimental results show that the transformer architecture accurately captures patterns in deterministic 
+                sequences and demonstrates partial success on chaotic sequences (Collatz, Fibonacci, prime numbers), revealing limitations due
+                to the irregular structure. This study demonstrates that transformers can serve as sequence learners, however they come with limitations. 
+        </p>
+
+        <!-- PDF section: link + embedded viewer -->
+        <div class="pdf-section">
+            <h2>Paper</h2>
+            <p>
+                <a href="sequence_transformer_report.pdf" target="_blank" rel="noopener noreferrer">
+                    📄 Open full paper as PDF
+                </a>
+            </p>
+            <!-- PDF embedding. -->
+            <iframe class="pdf-viewer" src="sequence_transformer_report.pdf">
+                Your browser does not support embedded PDFs.
+                Please use the link above to view the paper.
+            </iframe>
+        </div>
 
         <a class="project-link" href="https://github.com/jtbillings22/sequence-transformer" target="_blank">View Project Repository</a>
 
