--- a/index.html
+++ b/index.html
@@ -40,16 +40,18 @@
         .video-section {
             margin-top: 20px;
         }
-        .video-placeholder {
-            width: 100%;
-            height: 400px;
-            background: #ddd;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #666;
-            font-size: 20px;
+        .video-wrapper {
+        position: relative;
+        width: 100%;
+        padding-top: 56.25%; /* 16:9 */
+        border-radius: 8px;
+        overflow: hidden;
+        }
+        .video-wrapper iframe {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
         }
         .pdf-section {
             margin-top: 30px;
@@ -110,8 +112,14 @@
 
         <div class="video-section">
             <h2>Project Video</h2>
-            <div class="video-placeholder">
-                Video goes here (embed YouTube or upload)
+            <div class="video-wrapper">
+                <iframe
+                    src="https://www.youtube.com/watch?v=MHp-VcA8wQA"
+                    title="Sequence Transformer demo"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                ></iframe>
             </div>
         </div>
     </div>
