added embedded yt video to website

--- a/index.html
+++ b/index.html
@@ -113,13 +113,15 @@
         <div class="video-section">
             <h2>Project Video</h2>
             <div class="video-wrapper">
-                <iframe
-                    src="https://www.youtube.com/watch?v=MHp-VcA8wQA"
-                    title="Sequence Transformer demo"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                ></iframe>
+                <<iframe 
+                    width="560" 
+                    height="315" 
+                    src="https://www.youtube.com/embed/MHp-VcA8wQA?si=RvTCKX9M23J18BkC" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen></iframe>
             </div>
         </div>
     </div>
